--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>994</width>
-    <height>599</height>
+    <width>1192</width>
+    <height>742</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -100,7 +100,7 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>190</x>
       <y>100</y>
       <width>141</width>
       <height>111</height>
@@ -218,7 +218,7 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>190</x>
       <y>220</y>
       <width>141</width>
       <height>49</height>
@@ -259,7 +259,7 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>190</x>
       <y>10</y>
       <width>141</width>
       <height>81</height>
@@ -383,10 +383,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>10</y>
+      <x>20</x>
+      <y>420</y>
       <width>461</width>
-      <height>261</height>
+      <height>271</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -431,10 +431,10 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>800</x>
+      <x>360</x>
       <y>10</y>
       <width>126</width>
       <height>140</height>
@@ -623,13 +623,51 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWebEngineView" name="webEngineView">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>10</y>
+      <width>681</width>
+      <height>451</height>
+     </rect>
+    </property>
+    <property name="url">
+     <url>
+      <string>about:blank</string>
+     </url>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="table_points">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>470</y>
+      <width>681</width>
+      <height>221</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_delete_points">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>420</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Стереть точки</string>
+    </property>
+   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>160</y>
-      <width>131</width>
-      <height>236</height>
+      <x>361</x>
+      <y>161</y>
+      <width>121</width>
+      <height>81</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -759,300 +797,6 @@
        </item>
       </layout>
      </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_12">
-       <item>
-        <widget class="QLabel" name="lb_mag_x">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>MAG_x</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_mag_x_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>MAG_x</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_13">
-       <item>
-        <widget class="QLabel" name="lb_mag_y">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>MAG_y</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_mag_y_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>MAG_y</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_14">
-       <item>
-        <widget class="QLabel" name="lb_mag_z">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>MAG_z</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_mag_z_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>MAG_z</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_15">
-       <item>
-        <widget class="QLabel" name="lb_gyro_x">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GYRO_x</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_gyro_x_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GYRO_x</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_16">
-       <item>
-        <widget class="QLabel" name="lb_gyro_y">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GYRO_y</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_gyro_y_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GYRO_y</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_17">
-       <item>
-        <widget class="QLabel" name="lb_gyro_z">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GYRO_z</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_gyro_z_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GYRO_z</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_18">
-       <item>
-        <widget class="QLabel" name="lb_grn_head">
-         <property name="minimumSize">
-          <size>
-           <width>58</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>58</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GndHead</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lb_grn_head_val">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>GndHead</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
     </layout>
    </widget>
   </widget>
@@ -1061,13 +805,20 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>994</width>
+     <width>1192</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QWebEngineView</class>
+   <extends>QWidget</extends>
+   <header location="global">QtWebEngineWidgets/QWebEngineView</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
