Добавлен UI виджет для видео-потока с камеры

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1192</width>
+    <width>1701</width>
     <height>742</height>
    </rect>
   </property>
@@ -75,7 +75,16 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QLabel" name="lb_connection">
+      <widget class="QLabel" name="lb_name_map_5">
+       <property name="maximumSize">
+        <size>
+         <width>150</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: None;</string>
+       </property>
        <property name="text">
         <string>Подключение клиента</string>
        </property>
@@ -177,7 +186,7 @@
      <item>
       <widget class="QLabel" name="lb_mtr_ctrl">
        <property name="text">
-        <string>Управление двигателем</string>
+        <string>Управление ДВС</string>
        </property>
       </widget>
      </item>
@@ -218,9 +227,9 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>220</y>
-      <width>141</width>
+      <x>20</x>
+      <y>330</y>
+      <width>142</width>
       <height>49</height>
      </rect>
     </property>
@@ -228,7 +237,7 @@
      <item>
       <widget class="QLabel" name="lb_set_power">
        <property name="text">
-        <string>Задание мощности</string>
+        <string>Задание мощности ДВС</string>
        </property>
       </widget>
      </item>
@@ -267,7 +276,16 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_6">
      <item>
-      <widget class="QLabel" name="lb_info">
+      <widget class="QLabel" name="lb_name_map_4">
+       <property name="maximumSize">
+        <size>
+         <width>101</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: None;</string>
+       </property>
        <property name="text">
         <string>Инфо</string>
        </property>
@@ -326,8 +344,8 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>330</y>
+      <x>190</x>
+      <y>220</y>
       <width>141</width>
       <height>80</height>
      </rect>
@@ -393,7 +411,7 @@
      <item>
       <widget class="QLabel" name="label_7">
        <property name="text">
-        <string>Терминала</string>
+        <string>Терминал</string>
        </property>
       </widget>
      </item>
@@ -434,13 +452,29 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>350</x>
       <y>10</y>
-      <width>126</width>
-      <height>140</height>
+      <width>131</width>
+      <height>184</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_9">
+     <item>
+      <widget class="QLabel" name="lb_name_map_2">
+       <property name="maximumSize">
+        <size>
+         <width>101</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: None;</string>
+       </property>
+       <property name="text">
+        <string>GPS</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
@@ -623,54 +657,32 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWebEngineView" name="webEngineView">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>10</y>
-      <width>681</width>
-      <height>451</height>
-     </rect>
-    </property>
-    <property name="url">
-     <url>
-      <string>about:blank</string>
-     </url>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="table_points">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>470</y>
-      <width>681</width>
-      <height>221</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_delete_points">
-    <property name="geometry">
-     <rect>
-      <x>1030</x>
-      <y>420</y>
-      <width>151</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Стереть точки</string>
-    </property>
-   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>361</x>
-      <y>161</y>
-      <width>121</width>
-      <height>81</height>
+      <x>350</x>
+      <y>210</y>
+      <width>131</width>
+      <height>90</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_10">
+     <item>
+      <widget class="QLabel" name="lb_name_map_3">
+       <property name="maximumSize">
+        <size>
+         <width>101</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: None;</string>
+       </property>
+       <property name="text">
+        <string>IMU</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_9">
        <item>
@@ -688,7 +700,7 @@
           </size>
          </property>
          <property name="text">
-          <string>AXL_x</string>
+          <string>Pitch</string>
          </property>
         </widget>
        </item>
@@ -730,7 +742,7 @@
           </size>
          </property>
          <property name="text">
-          <string>AXL_y</string>
+          <string>Roll</string>
          </property>
         </widget>
        </item>
@@ -772,7 +784,7 @@
           </size>
          </property>
          <property name="text">
-          <string>AXL_z</string>
+          <string>Yaw</string>
          </property>
         </widget>
        </item>
@@ -799,13 +811,158 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>420</y>
+      <width>541</width>
+      <height>271</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_12">
+     <item>
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Координаты точек</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTableWidget" name="table_points"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_delete_points">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Очистить точки</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>14</y>
+      <width>543</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_11">
+     <item>
+      <widget class="QLabel" name="lb_name_map">
+       <property name="maximumSize">
+        <size>
+         <width>101</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: None;</string>
+       </property>
+       <property name="text">
+        <string>Карта</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QWebEngineView" name="webEngineView">
+       <property name="url">
+        <url>
+         <string>about:blank</string>
+        </url>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>13</y>
+      <width>642</width>
+      <height>421</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_13">
+     <item>
+      <widget class="QLabel" name="lb_name_camera_2">
+       <property name="maximumSize">
+        <size>
+         <width>150</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: None;</string>
+       </property>
+       <property name="text">
+        <string>Видеопоток с камеры</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lb_camera">
+       <property name="minimumSize">
+        <size>
+         <width>640</width>
+         <height>360</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>640</width>
+         <height>360</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: grey;
+border: None;
+</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_12">
+       <item>
+        <widget class="QPushButton" name="btn_start_camera">
+         <property name="text">
+          <string>Запустить</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_stop_camera">
+         <property name="text">
+          <string>Остановить</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1192</width>
+     <width>1701</width>
      <height>22</height>
     </rect>
    </property>
