--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1701</width>
-    <height>742</height>
+    <width>1138</width>
+    <height>736</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -657,7 +657,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -811,86 +811,11 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>420</y>
-      <width>541</width>
-      <height>271</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_12">
-     <item>
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>Координаты точек</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QTableWidget" name="table_points"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_delete_points">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>25</height>
-        </size>
-       </property>
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-       <property name="text">
-        <string>Очистить точки</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>14</y>
-      <width>543</width>
-      <height>391</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_11">
-     <item>
-      <widget class="QLabel" name="lb_name_map">
-       <property name="maximumSize">
-        <size>
-         <width>101</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">border: None;</string>
-       </property>
-       <property name="text">
-        <string>Карта</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QWebEngineView" name="webEngineView">
-       <property name="url">
-        <url>
-         <string>about:blank</string>
-        </url>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>1050</x>
-      <y>13</y>
+      <x>490</x>
+      <y>10</y>
       <width>642</width>
       <height>421</height>
      </rect>
@@ -962,20 +887,13 @@ border: None;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1701</width>
+     <width>1138</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QWebEngineView</class>
-   <extends>QWidget</extends>
-   <header location="global">QtWebEngineWidgets/QWebEngineView</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
